[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=2]
[ext_resource path="res://pong-block.png" type="Texture" id=3]
[ext_resource path="res://framd.ttf.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 499.927, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.214844, 0.213165, 0.213165, 0.762431 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[node name="game-background" type="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="player1" parent="." index="0" instance=ExtResource( 1 )]

position = Vector2( 78.8103, 273.381 )
speed = 500

[node name="player2" parent="." index="1" instance=ExtResource( 1 )]

position = Vector2( 951.28, 278.498 )
speed = 500
UP_INPUT_ACTION = "player2-up"
DOWN_INPUT_ACTION = "player2-down"

[node name="game-bounds" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="top" type="StaticBody2D" parent="game-bounds" index="0"]

editor/display_folded = true
position = Vector2( 514.472, -9.55186 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.0
bounce = 1.0
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game-bounds/top" index="0"]

position = Vector2( -2.58985, 0 )
scale = Vector2( 1.02325, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="bottom" type="StaticBody2D" parent="game-bounds" index="1"]

editor/display_folded = true
position = Vector2( 513.472, 611 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.0
bounce = 1.0
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game-bounds/bottom" index="0"]

position = Vector2( -2.58985, 0 )
scale = Vector2( 1.02325, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="left" type="StaticBody2D" parent="game-bounds" index="2" groups=[
"dangerous-border",
]]

editor/display_folded = true
position = Vector2( -12.1038, 297.992 )
rotation = -1.57044
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.0
bounce = 1.0
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game-bounds/left" index="0"]

position = Vector2( -2.43793, 0 )
scale = Vector2( 0.640249, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="right" type="StaticBody2D" parent="game-bounds" index="3" groups=[
"dangerous-border",
]]

editor/display_folded = true
position = Vector2( 1033.2, 297.992 )
rotation = -1.57044
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.0
bounce = 1.0
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game-bounds/right" index="0"]

position = Vector2( -2.43793, 0 )
scale = Vector2( 0.640249, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="pong-block" type="RigidBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 507.327, 280.779 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 1.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 2 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Transform" ]
initialVector = Vector2( 250, -250 )

[node name="pong-block-image" type="Sprite" parent="pong-block" index="0"]

scale = Vector2( 20, 20 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="pong-block-collision-shape" type="CollisionShape2D" parent="pong-block" index="1"]

visible = false
shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="game-over-panel" type="Panel" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 3 )
_sections_unfolded = [ "Visibility", "custom_styles" ]

[node name="player-1-wins" type="Label" parent="game-over-panel" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 639, 172 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Player 1 Wins"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Material", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="player-2-wins" type="Label" parent="game-over-panel" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 639, 172 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Player 2 wins!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="body_entered" from="pong-block" to="pong-block" method="_on_blockRigidBody2D_body_entered"]

[connection signal="gameover" from="pong-block" to="game-over-panel" method="show"]

[connection signal="mouse_entered" from="pong-block" to="pong-block" method="_on_blockRigidBody2D_mouse_entered"]

[connection signal="outOfBoundsLeft" from="pong-block" to="game-over-panel/player-2-wins" method="show"]

[connection signal="outOfBoundsRight" from="pong-block" to="game-over-panel/player-1-wins" method="show"]


